--- a/src/styles.css
+++ b/src/styles.css
@@ -13,9 +13,9 @@ min-height: 350px; */
 }
 
 body {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
-  margin: 0px;
+  /* margin: 0px; */
 }
 
 /*
@@ -28,18 +28,29 @@ align-items: center;
 padding-top: 11%;
 } */
 
-header {
+.hero {
+  background-image: url(http://coolfashiondesigns.com/wp-content/uploads/2015/10/facebook-profile-pic-for-attitude-boys-with-guitar.jpg);
+  background-size: cover;
+  position: relative;
+  width: 100vw;
+}
+
+.navbar {
   display: flex;
   justify-content: space-between;
   border-bottom: black;
   border-bottom-style: solid;
+  background: white;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
-header > div {
+.navbar > div {
   display: flex;
 }
 
-header > div > h1 {
+.navbar > div > h1 {
   font-size: 2em;
   color: #C3025A;
 }
@@ -74,7 +85,7 @@ header > div > h1 {
   background-repeat: no-repeat;
   background-position-x: 96%;
   /* width: 14em; */
-  width: 205px;
+  width: 240px;
   border-radius: 4px;
   padding: .5em .5em;
   background-size: 2.6em;
@@ -103,6 +114,11 @@ header > div > h1 {
   padding-right: 2vw;
 }
 
+.home-main-content > h1 {
+  font-size: 3em;
+  text-align: center;
+}
+
 .featured-recipe {
   display: flex;
   margin-top: 2vw;
@@ -116,7 +132,16 @@ header > div > h1 {
 }
 
 .featured-recipe-title {
-  font-size: 3vh
+  font-size: 3em;
+  padding-bottom: 2vw;
+  font-weight: bolder;
+}
+
+.featured-recipe-description {
+  font-size: 1.1em;
+  font-style: italic;
+  font-weight: 100;
+  line-height: 2em;
 }
 
 .home-others-cookin-sidebar {
