--- a/src/styles.css
+++ b/src/styles.css
@@ -15,9 +15,15 @@ min-height: 350px; */
 body {
   /* height: 100%; */
   width: 100%;
-  /* margin: 0px; */
+  margin: 0px;
 }
 
+body > h1 {
+  position: absolute;
+  margin-left: 2vh;
+  font-size: 2.3em;
+  color: white;
+}
 /*
 main {
 display: flex;
@@ -28,17 +34,24 @@ align-items: center;
 padding-top: 11%;
 } */
 
+#hero-container {
+  height: 87vh;
+  overflow: hidden;
+}
+
 .hero {
-  background-image: url(http://coolfashiondesigns.com/wp-content/uploads/2015/10/facebook-profile-pic-for-attitude-boys-with-guitar.jpg);
   background-size: cover;
-  position: relative;
+  /* position: relative; */
   width: 100vw;
+  background-position: center bottom;
+  width: max-content;
+  height: max-content;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
-  border-bottom: black;
+  border-bottom: #AAAAAA;
   border-bottom-style: solid;
   background: white;
   position: -webkit-sticky;
@@ -51,8 +64,9 @@ padding-top: 11%;
 }
 
 .navbar > div > h1 {
-  font-size: 2em;
+  font-size: 2.3em;
   color: #C3025A;
+  margin: 1.75vh 0vh;
 }
 
 .icon {
@@ -64,14 +78,14 @@ padding-top: 11%;
 }
 
 #header-hamburger-menu {
-  height: 3em;
+  height: 2em;
   padding-right: 2em;
-  padding-left: 2em;
+  padding-left: 4em;
 }
 
 #header-profile-icon {
   height: 3em;
-  padding-right: 2em;
+  padding-right: 4em;
   padding-left: 2em;
 }
 
@@ -84,16 +98,17 @@ padding-top: 11%;
   background-image: url(../assets/search-solid.svg);
   background-repeat: no-repeat;
   background-position-x: 96%;
+  stroke-width: 1em;
   /* width: 14em; */
   width: 240px;
   border-radius: 4px;
   padding: .5em .5em;
-  background-size: 2.6em;
+  background-size: 1.6em;
   background-position-y: center;
   margin-top: 2vw;
   /* background-color:#666666;
   color: white; */
-  transition: width .3s;
+  transition: width 3s;
   font-size: 1em;
 }
 .search-input--clicked {
