--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
-* {
+/* * {
   border: solid .1px;
-}
-
+} */
 #hero-container {
   height: 87vh;
   overflow: hidden;
@@ -37,6 +36,8 @@ body>h1 {
   margin-left: 2vh;
   font-size: 2.3em;
   color: white;
+  border: solid .1px;
+  padding: .05em .1em;
 }
 
 /* main {
@@ -99,6 +100,21 @@ padding-top: 11%;
   height: 3em;
   padding-right: 4em;
   padding-left: 2em;
+}
+
+.nav-search-input {
+  background-image: url(../assets/search-solid.svg);
+  background-repeat: no-repeat;
+  background-position-x: 96%;
+  stroke-width: 1em;
+  width: 240px;
+  border-radius: 4px;
+  padding: .5em .5em;
+  background-size: 1.6em;
+  background-position-y: center;
+  transition: width 3s;
+  font-size: 1em;
+  margin: 3vh;
 }
 
 .search-bar {
@@ -198,6 +214,8 @@ padding-top: 11%;
   /* padding-right: 3.5vw; */
   align-content: center;
   /* width: -webkit-fill-available; */
+  overflow-y: scroll;
+  height: 100vh;
 }
 
 .others-sidebar-card {
@@ -262,61 +280,144 @@ padding-top: 11%;
   align-content: center;
 }
 
-/* ---------- VIEW RECIPE Section ----------- */
-.recipe {
-  max-width: 100vw;
+/* ---------- VIEW RECIPE PAGE Section ----------- */
+.recipe-view {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
+  padding-top: 4vh;
 }
 
 .recipe-left-column {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  padding-left: 4vw;
+  overflow: hidden;
 }
 
 .recipe-img {
-  max-width: 600px;
+  /* height: 400px; */
+  /* width: 60vw;
+  min-width: 500px; */
+  width: 60vw;
+  min-width: 500px;
+  max-width: 50vw;
 }
 
 .recipe-icons {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 35px;
 }
 
 .recipe-icon {
-  max-width: 20px;
+  width: 30px;
+}
+
+.recipe-bookmark-icon {
+  width: 36px;
+}
+
+.recipe-dollar-icon {
+  width: 22px;
+}
+
+.recipe-basket-icon {
+  width: 50px;
+}
+
+.recipe-solid-cookie-icon {
+  width: 45px;
+  padding-right: 20px;
 }
 
 .recipe-cost {
   display: flex;
   flex-direction: row;
-  max-width: 20px;
+  /* max-width: 20px; */
 }
-/* .recipe-popularity {} */
-.recipe-ingredients {
-  display:flex;
+
+.recipe-popularity {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-size: 1.2em;
+}
+
+.recipe-popularity {
+  font-size: 2em;
+}
+
+.recipe-ingredients {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 1em;
+  border: solid .1px;
+}
+
+.ingredients-amount {
+  align-content: center;
+  align-items: center;
+}
+
+.ingredient {
+  display: flex;
+  flex-direction: column;
 }
 
 .recipe-right-column {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
+  padding: 2vw;
+  padding-top: 0;
+  width: 40vw;
+  overflow-y: scroll;
+  height: 100vh;
 }
 
+/* removes scroll bar */
+/* ::-webkit-scrollbar {
+  display: none;
+} */
 .recipe-title {
   font-size: 5em;
+  margin: 0;
+  background-color: black;
+  color: white;
+  padding: 5px 10px;
+  margin-bottom: 2vh;
+}
+
+.recipe-details {
+  font-size: 1.5em;
+  font-style: italic;
+  /* font-weight: lighter; */
+  padding: 0 2vw;
+  padding-top: 5vh;
+  line-height: 1.7em;
+  width: 34vw;
+  text-align: center;
+}
+
+.recipe-ingredients {
+  font-size: 1.5em;
+  line-height: 1.5em;
+  border: black solid;
+  margin-top: 5vh;
+  padding: 1em;
 }
 
 .recipe-instructions {
-  font-size: 1.2em;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  padding: 0 1.5vw;
+  font-weight: lighter;
+  text-align: justify;
 }
 
 /* ---------- USER VIEW Section ----------- */
