--- a/src/styles.css
+++ b/src/styles.css
@@ -100,8 +100,14 @@ padding-top: 11%;
 
 #header-profile-icon {
   height: 3em;
-  padding-right: 4em;
-  padding-left: 2em;
+  /* padding-right: 0em;
+  padding-left: 0em; */
+}
+
+.nav-search-bar {
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
 }
 
 .nav-search-input {
@@ -152,8 +158,51 @@ padding-top: 11%;
   font-size: 1.1rem;
 }
 
-/**************  Main content  ******************/
 
+.dropbtn {
+  background-color: white;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  padding: 10px;
+  /* border: none;
+  position: relative;
+  display: inline-block;
+  align-self: center; */
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 12px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
+/**************  Main content  ******************/
 .recipe-image {
   cursor: pointer;
   /* transform: scale(1); */
@@ -413,7 +462,8 @@ padding-top: 11%;
   padding-top: 0;
   width: 40vw;
   overflow-y: scroll;
-  height: 66em;}
+  height: 66em;
+}
 
 /* removes scroll bar */
 /* ::-webkit-scrollbar {
@@ -471,8 +521,6 @@ padding-top: 11%;
   padding: 4vh 0;
   text-decoration: underline;
 }
-
-
 
 /* ---------- USER VIEW Section ----------- */
 .suggestions-container {
@@ -532,34 +580,59 @@ padding-top: 11%;
 }
 
 .fade-in {
-animation: fadeIn ease .5s;
--webkit-animation: fadeIn ease .5s;
--moz-animation: fadeIn ease .5s;
--o-animation: fadeIn ease .5s;
--ms-animation: fadeIn ease .5s;
+  animation: fadeIn ease .5s;
+  -webkit-animation: fadeIn ease .5s;
+  -moz-animation: fadeIn ease .5s;
+  -o-animation: fadeIn ease .5s;
+  -ms-animation: fadeIn ease .5s;
 }
 
 @keyframes fadeIn {
-0% {opacity:0;}
-100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 @-moz-keyframes fadeIn {
-0% {opacity:0;}
-100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 @-webkit-keyframes fadeIn {
-0% {opacity:0;}
-100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 @-o-keyframes fadeIn {
-0% {opacity:0;}
-100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 @-ms-keyframes fadeIn {
-0% {opacity:0;}
-100% {opacity:1;}
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
