Create determineUser function

--- a/src/styles.css
+++ b/src/styles.css
@@ -88,6 +88,10 @@ padding-top: 11%;
   height: 1.5em;
 }
 
+.dropdown-header-icon {
+  align-self: center;
+}
+
 .header-icon {
   align-self: center;
 }
@@ -158,14 +162,21 @@ padding-top: 11%;
   font-size: 1.1rem;
 }
 
-
+.accounts-icon {
+  align-self: center;
+}
+.user-accounts {
+  height: 250px;
+  overflow-y: scroll;
+}
+/*
 .dropbtn {
   background-color: white;
   color: white;
   padding: 16px;
   font-size: 16px;
   border: none;
-}
+} */
 
 .dropdown {
   padding: 10px;
@@ -405,16 +416,67 @@ padding-top: 11%;
   width: 30px;
 }
 
+@keyframes pulse {
+  0% {
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+  }
+}
+
 .recipe-bookmark-icon {
   width: 36px;
+  background-image: url(../assets/bookmark-regular.svg);
+  background-repeat: no-repeat;
+  transform: scale(1);
+  transition: all .2s ease-in-out;
+}
+
+.recipe-bookmark-icon:hover {
+  width: 36px;
+  background-image: url(../assets/bookmark-solid-red.svg);
+  transform: scale(1.1);
+}
+
+.recipe-bookmark-icon--active {
+  width: 36px;
+  background-image: url(../assets/bookmark-solid-red.svg);
+  transform: scale(1.1);
+  animation-name: pulse;
+  animation-duration: .2s;
+  animation-iteration-count: 1;
 }
 
 .recipe-dollar-icon {
   width: 22px;
+  background-image: url(../assets/dollar-active.svg);
+  background-repeat: no-repeat;
+  transform: scale(1);
+  transition: all .2s ease-in-out;
+}
+
+.recipe-dollar-icon:hover {
+  transform: scale(1.1);
 }
 
 .recipe-basket-icon {
-  width: 50px;
+  background-image: url(../assets/basket.svg);
+  background-repeat: no-repeat;
+  transform: scale(1);
+  transition: all .2s ease-in-out;
+}
+
+.recipe-bookmark-icon:hover {
+  transform: scale(1.1);
+}
+
+.recipe-basket-icon--all-ingredients {
+  background-image: url(../assets/basket-green.svg);
+  background-repeat: no-repeat;
+  transform: scale(1);
+  transition: all .2s ease-in-out;
 }
 
 .recipe-solid-cookie-icon {
@@ -527,22 +589,36 @@ padding-top: 11%;
   text-decoration: underline;
 }
 
-/* ---------- USER VIEW Section ----------- */
+/* --------------------- USER VIEW Section --------------------- */
+.main-user-body{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+            /* --------USER SUGGESTIONS Section-------- */
 .suggestions-container {
   /* border: solid 1px; */
-  /* padding: 10px 10px; */
+  padding: 50px 30px;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
   max-width: 15vw;
 }
 
-.suggested-recipes-to-cook-container {
+.suggested {
   border: solid 1px;
   display: flex;
   flex-direction: column;
   padding: 10px 10px;
 }
+
+/* .suggested-recipes-to-cook-container {
+  border: solid 1px;
+  display: flex;
+  flex-direction: column;
+} */
 
 .suggested-recipes-to-cook {
   border: solid 1px;
@@ -551,12 +627,12 @@ padding-top: 11%;
   padding: 10px 10px;
 }
 
-.suggested-favorites-container {
+/* .suggested-favorites-container {
   border: solid 1px;
   display: flex;
   flex-direction: column;
   padding: 10px 10px;
-}
+} */
 
 .suggested-favorites {
   border: solid 1px;
@@ -564,22 +640,68 @@ padding-top: 11%;
   flex-direction: column;
   padding: 10px 10px;
 }
-
-.user-section {
+            /* --------USER VIEW '______' Section-------- */
+.user-view-section {
   border: solid .5px;
+  padding: 20px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
   /* max-width: 50px; */
 }
 
-.user-navigation {
+.recipe-container {
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  /* flex: 1 1 160px; */
+  justify-content: space-around;
+  align-items: center;
+  /* max-width: 20; */
+}
+.user-view-section>* {
+       flex: 1 1 80px;
+   }
+
+
+.user-recipe-image {
+  padding: 20px;
+  width: 180px;
+}
+
+.recipe-info-block{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+}
+
+.recipe-info-icons{
+  display: flex;
+  flex-direction: row;
+  width: 10vw;
+}
+
+/* .user-navigation {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   margin-left: 150px;
   align-items: center;
-}
+} */
 
+
+
+
+
+
+
+
+
+
+/* -----------------------ADDITIONAL STYLINGS---------------------- */
 .hidden {
   display: none;
 }
