--- a/src/styles.css
+++ b/src/styles.css
@@ -81,7 +81,7 @@ body>h1 {
 .navbar-user-name-wrapper--active {
   background-color: #C3025B;
   height: 100%;
-  margin: 0 1em;
+  margin-left: 1em;
   padding: 0 .5em;
   animation-name: pulse;
   animation-duration: .8s;
@@ -93,6 +93,25 @@ body>h1 {
 
 .navbar-user-name {
   color: white;
+}
+
+.navbar-user-section-wrapper--active {
+  background-color: salmon;
+  height: 100%;
+  padding: 0 .5em;
+  animation-name: change 500ms ease;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  padding-right: 1em;
+}
+
+.navbar-user-section-wrapper {
+  transition: background-color .3s ease-in .1s ease-out;
+}
+
+.navbar-user-section {
+  color: white;
+  font-weight: lighter;
 }
 
 .navbar-whats-cookin {
@@ -284,6 +303,7 @@ body>h1 {
 
 .featured-recipe-info {
   padding-left: 1vw;
+  /* overflow-y: scroll; */
 }
 
 .featured-recipe-title {
@@ -307,7 +327,7 @@ body>h1 {
   line-height: 2em;
   border-radius: 8px;
   padding: .5vw .9vw;
-  height: 35vh;
+  height: 34vh;
   transition: background-color 0.2s ease-in, color ease-in .2s;
 }
 
@@ -443,6 +463,19 @@ body>h1 {
     transform: scale(1.2);
   }
   100% {
+  }
+}
+
+@keyframes change {
+  0% {
+    opacity: 0;
+		transform: translateY(-80px);
+  }
+  50% {
+  }
+  100% {
+    opacity: 1;
+		transform: translateY(0px);
   }
 }
 
@@ -667,7 +700,7 @@ body>h1 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   /* max-width: 50px; */
 }
 
@@ -703,14 +736,77 @@ body>h1 {
   width: 10vw;
 }
 
-/* .user-navigation {
+/* --------MY PANTRY Section-------- */
+.pantry-view {
+  /* background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);*/
+  /* border: black 5px solid; */
+}
+
+.pantry-item-block {
+  display: flex;
+  background-color: white;
+  flex-direction: column;
+  border-radius: 20px;
+  border: grey solid;
+  align-items: center;
+  min-width: 170px;
+  max-width: 170px;
+}
+
+.pantry-icon{
+  width: 20px;
+}
+
+.delete-item-container{
+  align-self: baseline;
+}
+
+.pantry-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.item-quantity {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin-left: 150px;
   align-items: center;
-} */
+}
 
+.item-amount-input {
+  width: 1vw;
+  text-align: center;
+}
+
+
+.add-item-container {
+  /* display: flex; */
+  padding: 20px;
+  border: orange solid;
+  border-radius: 20px;
+  /* flex-direction: column;
+  justify-content: space-around; */
+  height: 40vh;
+}
+
+.add-item-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.form-input{
+  padding: 20px 0px;
+}
+
+.add-item-name {}
+
+.add-item-amount {}
+
+.add-item-button {
+  border-radius: 10px;
+}
 
 
 
