--- a/src/styles.css
+++ b/src/styles.css
@@ -87,6 +87,7 @@ body>h1 {
   animation-duration: .8s;
   animation-iteration-count: 2;
 }
+
 .navbar-user-name-wrapper {
   transition: background-color 1s ease-in .1s ease-out;
 }
@@ -121,7 +122,7 @@ body>h1 {
   cursor: pointer;
 }
 
-.icon {
+.sidebar-icon {
   height: 1.5em;
 }
 
@@ -204,10 +205,12 @@ body>h1 {
 .accounts-icon {
   align-self: center;
 }
+
 .user-accounts {
   height: 250px;
   overflow-y: scroll;
 }
+
 /*
 .dropbtn {
   background-color: white;
@@ -216,7 +219,6 @@ body>h1 {
   font-size: 16px;
   border: none;
 } */
-
 .dropdown {
   padding: 10px;
   /* border: none;
@@ -235,7 +237,7 @@ body>h1 {
   z-index: 1;
 }
 
-.dropdown-icons{
+.dropdown-icons {
   width: 15px;
 }
 
@@ -249,6 +251,7 @@ body>h1 {
 .dropdown-content a:hover {
   background-color: #ddd;
 }
+
 .dropdown:hover .dropdown-content {
   display: block;
 }
@@ -390,6 +393,10 @@ body>h1 {
   min-width: 110px; */
 }
 
+.others-sidebar-card-image-block > p {
+  max-width: fit-content;
+}
+
 .others-sidebar-card-image {
   max-width: 15vw;
   display: flex;
@@ -474,25 +481,26 @@ body>h1 {
 }
 
 @keyframes pulse {
-  0% {
-  }
+  0% {}
+
   50% {
     transform: scale(1.2);
   }
-  100% {
-  }
+
+  100% {}
 }
 
 @keyframes change {
   0% {
     opacity: 0;
-		transform: translateY(-80px);
+    transform: translateY(-80px);
   }
-  50% {
-  }
+
+  50% {}
+
   100% {
     opacity: 1;
-		transform: translateY(0px);
+    transform: translateY(0px);
   }
 }
 
@@ -550,6 +558,8 @@ body>h1 {
 }
 
 .recipe-solid-cookie-icon {
+  background-image: url(../assets/cookie.svg);
+  background-repeat: no-repeat;
   width: 45px;
   padding-right: 20px;
 }
@@ -660,13 +670,13 @@ body>h1 {
 }
 
 /* --------------------- USER VIEW Section --------------------- */
-.main-user-body{
+.main-user-body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-            /* --------USER SUGGESTIONS Section-------- */
+/* --------USER SUGGESTIONS Section-------- */
 .suggestions-container {
   /* border: solid 1px; */
   padding: 50px 30px;
@@ -689,7 +699,6 @@ body>h1 {
   display: flex;
   flex-direction: column;
 } */
-
 .suggested-recipes-to-cook {
   border: solid 1px;
   display: flex;
@@ -703,14 +712,14 @@ body>h1 {
   flex-direction: column;
   padding: 10px 10px;
 } */
-
 .suggested-favorites {
   border: solid 1px;
   display: flex;
   flex-direction: column;
   padding: 10px 10px;
 }
-            /* --------USER VIEW '______' Section-------- */
+
+/* --------USER VIEW '______' Section-------- */
 .user-view-section {
   /* border: solid .5px; */
   padding: 20px;
@@ -730,16 +739,17 @@ body>h1 {
   align-items: center;
   /* max-width: 20; */
 }
+
 .user-view-section>* {
-   flex: 1 1 80px;
- }
+  flex: 1 1 80px;
+}
 
 .user-recipe-image {
   padding: 20px;
   width: 180px;
 }
 
-.recipe-info-block{
+.recipe-info-block {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -747,7 +757,7 @@ body>h1 {
   align-items: center;
 }
 
-.recipe-info-icons{
+.recipe-info-icons {
   display: flex;
   flex-direction: row;
   width: 10vw;
@@ -770,11 +780,11 @@ body>h1 {
   max-width: 170px;
 }
 
-.pantry-icon{
+.pantry-icon {
   width: 20px;
 }
 
-.delete-item-container{
+.delete-item-container {
   align-self: baseline;
 }
 
@@ -796,7 +806,6 @@ body>h1 {
   text-align: center;
 }
 
-
 .add-item-container {
   /* display: flex; */
   padding: 20px;
@@ -813,7 +822,7 @@ body>h1 {
   justify-content: space-around;
 }
 
-.form-input{
+.form-input {
   padding: 20px 0px;
 }
 
@@ -825,13 +834,71 @@ body>h1 {
   border-radius: 10px;
 }
 
+/* --------SIDE NAVIGATION MENU -------- */
+span {
+  align-self: center;
+  margin-top: 10px;
+}
 
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #1A1918;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: width .75s;
+}
 
+.browse-categories {
+  /* margin-top: 100px; */
+}
 
+.sidenav h2 {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: antiquewhite;
+  display: block;
+  transition: 0.3s;
+}
 
+.sidenav a {
+  padding: 8px 8px 15px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
 
+.sidenav a:hover {
+  color: #f1f1f1;
+}
 
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
 
+.social-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 20px;
+  background-color: antiquewhite;
+  margin-top: 4em;
+}
+
+.social-icon {
+  width: 3vw;
+}
 
 /* -----------------------ADDITIONAL STYLINGS---------------------- */
 .hidden {
