Tighten up CSS on homepage to be more responsive

--- a/src/styles.css
+++ b/src/styles.css
@@ -263,14 +263,12 @@ body>h1 {
 /**************  Main content  ******************/
 .recipe-image {
   cursor: pointer;
-  /* transform: scale(1); */
   transition: all .2s ease-in-out;
 }
 
 .recipe-image:hover {
   cursor: pointer;
   transform: scale(1.025);
-  /* border: 2px solid #ddd; */
   z-index: 0
 }
 
@@ -300,14 +298,20 @@ body>h1 {
   padding: 1vh 0px;
 }
 
+.featured-recipe-image-wrapper {
+  overflow: hidden;
+  display: flex;
+  max-width: 43vw;
+}
+
 .featured-recipe-img {
-  height: 60vh;
-  min-height: 380px;
+  height: 103%;
 }
 
 .featured-recipe-info {
   padding-left: 1vw;
-  /* overflow-y: scroll; */
+  min-width: min-content;
+  max-width: 23vw;
 }
 
 .featured-recipe-title {
@@ -330,7 +334,8 @@ body>h1 {
   font-weight: 100;
   line-height: 2em;
   border-radius: 8px;
-  padding: .5vw .9vw;
+  text-align: justify;
+  padding: .5vw .1vw;
   height: 34vh;
   transition: background-color 0.2s ease-in, color ease-in .2s;
 }
@@ -358,8 +363,10 @@ body>h1 {
   display: flex;
   flex-direction: column;
   align-content: center;
-  /* overflow-y: scroll; */
-  /* height: 100vh; */
+}
+
+.others-sidebar-card-container {
+  width: min-content;
 }
 
 .others-sidebar-card {
@@ -384,20 +391,23 @@ body>h1 {
   justify-content: space-evenly;
 }
 
-.others-sidebar-card-image-block {
+.others-sidebar-card-image-wrapper {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  /* width: 7vw;
-  max-width: 120px;
-  min-width: 110px; */
+  height: 23vh;
 }
+
+.others-sidebar-card-image-wrapper > p {
+
+}
+
 .others-sidebar-card-info-block > p {
   text-align: center;
   font-weight: lighter;
 }
 
-.others-sidebar-card-image-block > p {
+.others-sidebar-card-image-wrapper > p {
   max-width: fit-content;
 }
 
@@ -411,7 +421,7 @@ body>h1 {
 .staff-picks {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -426,11 +436,21 @@ body>h1 {
 .staff-pick-block {
   max-width: 20vw;
   overflow: hidden;
+  padding: 0 1em;
+  min-width: 14em;
+  display: flex;
+  flex-direction: column;
+}
+
+.staff-pick-image-wrapper {
+  overflow: hidden;
+  height: 28vh;
+  width: fit-content;
 }
 
 .staff-pick-img {
-  max-width: 20vw;
-  overflow: hidden;
+  height: 100%;
+  width: 107%;
 }
 
 .staff-pick-title {
@@ -439,7 +459,6 @@ body>h1 {
   justify-content: center;
   font-size: 1.2em;
   font-weight: lighter;
-  width: 81%;
 }
 
 .staff-pick-icons {
