--- a/src/styles.css
+++ b/src/styles.css
@@ -318,6 +318,7 @@ body>h1 {
 }
 
 .featured-recipe-title {
+  border-radius: 6px;
   font-size: 3em;
   padding-bottom: 2vw;
   padding: 0 1vw;
@@ -328,7 +329,6 @@ body>h1 {
 .featured-recipe-title:hover {
   background-color: black;
   color: white;
-  border-radius: 8px;
 }
 
 .featured-recipe-description {
@@ -593,7 +593,7 @@ body>h1 {
   transition: all .2s ease-in-out
 }
 
-/* .recipe-solid-cookie-icon--inactive:hover {
+.recipe-solid-cookie-icon--inactive:hover {
   background-image: url(../assets/cookie-color.svg);
   transform: scale(1.1);
 }
@@ -604,7 +604,7 @@ body>h1 {
   animation-name: pulse;
   animation-duration: .2s;
   animation-iteration-count: 1;
-} */
+}
 
 .recipe-cost {
   display: flex;
@@ -720,13 +720,14 @@ body>h1 {
 
 /* --------USER SUGGESTIONS Section-------- */
 .suggestions-container {
-  /* border: solid 1px; */
-  padding: 50px 30px;
+  border: dashed 2px;
+  padding: 30px 30px;
+  margin-top: 100px;
   display: flex;
+  height: fit-content;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
-  max-width: 15vw;
+  /* max-width: 15vw; */
 }
 
 .suggested {
@@ -875,6 +876,43 @@ body>h1 {
 .add-item-button {
   border-radius: 10px;
 }
+
+
+/* --------SEARCH VIEW Section -------- */
+.search-view {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* overflow: hidden; */
+  margin-left: -250px;
+  width: 50em;
+}
+
+.search-result-container {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 20px;
+  padding: 20px;
+}
+
+.star-icon {
+  width: 20px;
+  padding-right: 10px;
+}
+
+.search-result {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  font-size: 1em;
+}
+
+.search-recipe-image {
+  max-width: 50vw;
+  border-radius: 20px;
+}
+
 
 /* --------SIDE NAVIGATION MENU -------- */
 span {
