--- a/src/styles.css
+++ b/src/styles.css
@@ -404,6 +404,7 @@ body>h1 {
 .others-sidebar-card-info-icons {
   display: flex;
   justify-content: space-evenly;
+  width: 9vw;
 }
 
 .others-sidebar-card-image-wrapper {
@@ -413,6 +414,9 @@ body>h1 {
   height: 23vh;
 }
 
+#others-score{
+  font-size: .7em;
+}
 .others-title {
   margin: 0;
   text-align: center;
@@ -764,7 +768,8 @@ body>h1 {
 
 /* --------USER SUGGESTIONS Section-------- */
 .suggestions-container {
-  border: dashed 2px;
+  border: dashed #84fab0 3px;
+  border-radius: 20px;
   padding: 30px 30px;
   margin-top: 100px;
   display: flex;
@@ -870,8 +875,9 @@ body>h1 {
   display: flex;
   background-color: white;
   flex-direction: column;
+  padding: 10px;
   border-radius: 20px;
-  border: grey solid;
+  border: #a6c0fe solid;
   align-items: center;
   min-width: 170px;
   max-width: 170px;
@@ -889,23 +895,28 @@ body>h1 {
   display: flex;
   flex-direction: column;
   text-align: center;
+  font-family: fantasy;
 }
 
 .item-quantity {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  width: 8vw;
+  padding: 10px 0;
+  justify-content: space-between;
   align-items: center;
 }
 
 .item-amount-input {
-  width: 1vw;
+  width: 2.5vw;
+  height: 4vh;
   text-align: center;
 }
 
 .add-item-container {
   /* display: flex; */
   padding: 20px;
+  margin-top: 100px;
   border: orange solid;
   border-radius: 20px;
   /* flex-direction: column;
@@ -973,7 +984,6 @@ body>h1 {
   margin: 1em;
   background-size: 2em;
   height: 4em;
-  background-image: url(../assets/bookmark-light.svg);
 }
 
 /* --------SIDE NAVIGATION MENU -------- */
