--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ body {
   margin: 0px;
 }
 
-body>h1 {
+.hero-container > h1 {
   position: absolute;
   margin-left: 2vh;
   font-size: 2.3em;
@@ -68,8 +68,8 @@ body>h1 {
   top: 0;
   box-shadow: 0px 6px 12px 0px #0000003d;
   z-index: 10;
-  height: fit-content;
-  /* height: 5em; */
+  /* height: fit-content; */
+  height: 5em;
 }
 
 .navbar>div {
@@ -169,7 +169,7 @@ body>h1 {
   stroke-width: 1em;
   width: 240px;
   border-radius: 4px;
-  padding: .5em .5em;
+  padding: .2em .5em;
   background-size: 1.6em;
   background-position-y: center;
   transition: width 3s;
@@ -404,7 +404,8 @@ body>h1 {
 .others-sidebar-card-info-icons {
   display: flex;
   justify-content: space-evenly;
-  width: 9vw;
+  width: 8vw;
+  min-width: 7em;
 }
 
 .others-sidebar-card-image-wrapper {
@@ -420,6 +421,10 @@ body>h1 {
 .others-title {
   margin: 0;
   text-align: center;
+  color: white;
+  background-color: black;
+  line-height: 1.5em;
+  border-radius: 3px;
 }
 
 .others-sidebar-card-info-block > p {
@@ -435,6 +440,7 @@ body>h1 {
   max-width: 15vw;
   display: flex;
   flex-direction: column;
+  border-radius: 3px;
 }
 
 /* ---------- STAFF PICKS Section ----------- */
@@ -445,6 +451,7 @@ body>h1 {
   width: 100%;
   padding: .2em 0;
   margin: 1em 0;
+  justify-content: center;
 }
 
 .staff-picks-title {
@@ -461,6 +468,7 @@ body>h1 {
   flex-direction: column;
   align-content: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .staff-pick-image-wrapper {
@@ -966,6 +974,28 @@ body>h1 {
 .star-icon {
   width: 20px;
   padding-right: 10px;
+  background-size: 2.25vh;
+  background-image: url(../assets/star-empty.svg);
+  background-repeat: no-repeat;
+  transition: all .2s ease-in-out;
+}
+
+.star-icon:hover {
+  background-size: 2.45vh;
+  transition: all .2s ease-in-out;
+}
+
+.star-icon--active {
+  width: 20px;
+  padding-right: 10px;
+  background-size: 2.25vh;
+  background-image: url(../assets/star-filled-color.svg);
+  background-repeat: no-repeat;
+  transition: all .2s ease-in-out;
+  background-size: 2.7vh;
+  animation-name: pulse;
+  animation-duration: .2s;
+  animation-iteration-count: 1;
 }
 
 .search-result {
